Refactor UI to world objects; add animated buttons
Large refactor moving UI from Scene2D widgets to in-world GameObject-based components. Added AnimatedButton and StateAnimationController, and a new SavePreview implemented as a GameObject with NineSprite/ColoredSprite rendering. Replaced scene-based load screen controls with world-driven save previews and animated buttons; removed Hitbox. Adjusted input flow by changing GameObject.onTouchUp signature and unprojecting touch coordinates in WorldRenderer. Made animation internals protected and introduced nextAnimation() for override (used by StateAnimationController). Added NineSprite convenience constructor. Fixed SaveManager.getNewId() to use last list element. Track playtime in Main/GameState (started timestamp and addPlaytime on exit). Minor tweaks: muted resource load debug log, enabled GameLogic.debug, moved initScreens call from SplashScreen into Tick.start, added two sprite assets. Overall: UI rendering/input model refactor and assorted fixes.